# sosweet-manager

./: .gitignore  LICENCE.md  LICENSE.md  README.md  package-lock.json  package.json
.github/workflows/: python-app.yml
backend/: db_interface.py  main.py  pyproject.toml
frontend/: .eslintrc.js  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: Root.js  api.js  index.css  index.js  router.js  setupProxy.js  store.js
frontend/src/components/: AddPurchase.js  Checkin.js  CheckinTimeModify.js  Checkout.js  CheckoutTimetableRow.js  DogsListRow.js  Footer.js  GetMessageRow.js  Header.js  HistoryRow.js  MakeMessageModal.js  ModifyDog.js  NewDog.js  NotFound.js  PayHistoryRow.js  ProfileAvatar.js  SelectDog.js  TimetableRow.js
frontend/src/modals/: AddPay.js  AddPurchase.js  ChangeCheckInTime.js  Checkin.js  Checkout.js  DogInfo.js  MakeMessage.js  ModifyDog.js  ModifyHistory.js  ModifyPay.js  NewDog.js  SelectDog.js
frontend/src/routes/: DogsList.js  GetMessage.js  History.js  Home.js  Hotelling.js  PayHistory.js  Timetable.js  test.js
