[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["yoonki <yoonkeee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"
pymysql = "^1.0.2"
schedule = "^1.1.0"
apscheduler = "^3.10.1"
requests = "*"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
